--- a/src/BOS.StarterCode/Views/Users/AddUser.cshtml
+++ b/src/BOS.StarterCode/Views/Users/AddUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BOS.StarterCode.Models.RegistrationModel
 
 @{
-    ViewData["Title"] = "AddUser";
+    ViewData["Title"] = "AddUserdetails";
 }
 <div class="container-fluid">
     <div class="row">
